# Salary-rest-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Text Document.txt  docker-compose.yml  pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
salary_service/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
tests/: conftest.py  test_api.py
